crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__native_queries__select_artists_below_id.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "AC/DC"
      },
      {
        "Name": "Accept"
      },
      {
        "Name": "Aerosmith"
      },
      {
        "Name": "Alanis Morissette"
      }
    ]
  }
]
