crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__native_queries__select_sort_relationship.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 94,
        "title": "A Matter of Life and Death"
      },
      {
        "AlbumId": 95,
        "title": "A Real Dead One"
      },
      {
        "AlbumId": 96,
        "title": "A Real Live One"
      },
      {
        "AlbumId": 90,
        "title": "Appetite for Destruction"
      },
      {
        "AlbumId": 74,
        "title": "Album Of The Year"
      }
    ]
  }
]
