crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__native_queries__select_where_relationship.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 10,
        "title": "Audioslave"
      },
      {
        "AlbumId": 254,
        "title": "Aquaman"
      },
      {
        "AlbumId": 272,
        "title": "Adorate Deum: Gregorian Chant from the Proper of the Mass"
      },
      {
        "AlbumId": 296,
        "title": "A Copland Celebration, Vol. I"
      }
    ]
  }
]
